# portfolio

./: .env  .env.dev  .gitignore  Cargo.toml  mkdocs.yml  read_me.md  robots.txt  sitemap.xml
.dev_tls/: localhost.crt  localhost.key
assets/: sitemap.xml
assets/css/: about.css  base.css  documentation.css  generic.css  home.css  home_v2.css  ripple.css  sign_in.css
assets/favicon/: site.webmanifest
assets/js/: constellation.js  contact.js  count-up.js  cursor.js  fetcher.js  form.js  home.js  home_v2.js  leetcode.js  lenis.js  loader.js  navbar.js  project-tilt.js  projects-filter.js  role-pills.js  scroll-parallax.js  scroll-reveal.js  sign_in.js  skill-tabs.js  theme-switcher.js  theme.js  utils_1_0_1.js  youtube.js
assets/scss/: _contact_me.scss  _footer.scss  _generic.scss  _reset.scss  _variable.scss  generic.scss  home.scss  ripple.scss  sign_in.scss
components/toast-notification/: module.js  style.css
docs/: index.md
pages/: about.html  bottom_navigator.html  common.html  contact.html  contact_me.html  documentations.html  footer.html  hire.html  home.html  logo.html  sign_in.html
pages/common/: css.html  favicon.html
pages/error/: not_found.html  unauthorized.html
pages/home/: about.html  contact.html  design.html  docs.html  experience.html  footer.html  freelance.html  hero.html  marquee.html  nav.html  opensource.html  projects.html  services.html  skills.html  timeline.html  video-reel.html  youtube.html
pages/templates/: font.html
src/: builtins.rs  handler.rs  integrations.rs  main.rs  markup.rs  middleware.rs  model.rs  routes.rs  utils.rs
src/builtins/: cors.rs  cron.rs  csp.rs  image.rs  jwt.rs  logger.rs  mongo.rs  sqlite.rs  tls.rs
src/handler/: auth.rs  contact.rs  (+4 more)
static/: index.html  robots.txt  script.js  sitemap.xml  style.css
(+59 files in other folders)
